feat(submit button added to the form)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <input type="text" id="password" name="password">
         <label for="comfirm-password">Comfirm Password:</label>
         <input type="text" id="comfirm-password" name="comfirm-password">
+        <input type="button" value="Submit">
     </form>
 </body>
 </html>
