--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
     <form>
         <label for="country">Country:</label>
-        <input type="text" id="country" name="country">
+        <select name="country" id="country">
+            <option value="arg">Argentina</option>
+            <option value="br">Brasil</option>
+            <option value="dk">Denmark</option>
+        </select>
         <label for="zip-code">Zip code:</label>
         <input type="text" id="zip-code" name="zip-code">
         <label for="email">Email:</label>
