fix(email field modified)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <label for="zip-code">Zip code:</label>
         <input type="text" id="zip-code">
         <label for="email">Email:</label>
-        <input type="text" id="email" name="email">
+        <input type="text" id="email">
         <label for="password">Password:</label>
         <input type="text" id="password" name="password">
         <label for="comfirm-password">Comfirm Password:</label>
