--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <label for="email">Email:</label>
         <input type="text" id="email">
         <label for="password">Password:</label>
-        <input type="text" id="password" name="password">
+        <input type="text" id="password">
         <label for="comfirm-password">Comfirm Password:</label>
         <input type="text" id="comfirm-password" name="comfirm-password">
         <input type="submit" value="Submit"/>
