fix(comfirm password input field modified)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <label for="password">Password:</label>
         <input type="text" id="password">
         <label for="comfirm-password">Comfirm Password:</label>
-        <input type="text" id="comfirm-password" name="comfirm-password">
+        <input type="text" id="comfirm-password">
         <input type="submit" value="Submit"/>
     </form>
 </body>
