--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Form validation project</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
         <input type="text" id="password">
         <label for="comfirm-password">Comfirm Password:</label>
         <input type="text" id="comfirm-password">
-        <input type="submit" value="Submit"/>
+        <button type="button" id="submit-btn">Submit</button>
     </form>
 </body>
 </html>
