feat(new submit-message added to the body)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Form validation project</title>
 </head>
 <body>
-    <form>
+    <form id="form">
         <label for="country">Country:</label>
         <select id="country">
             <option value="arg">Argentina</option>
@@ -21,9 +21,10 @@
         <input type="text" id="email">
         <label for="password">Password:</label>
         <input type="text" id="password">
-        <label for="comfirm-password">Comfirm Password:</label>
-        <input type="text" id="comfirm-password">
-        <button type="button" id="submit-btn">Submit</button>
+        <label for="confirm-password">Confirm Password:</label>
+        <input type="text" id="confirm-password">
+        <button id="submit-btn">Submit</button>
     </form>
+    <p id="submit-message"></p>
 </body>
 </html>
